--- a/prism-app/App.xaml
+++ b/prism-app/App.xaml
@@ -1,7 +1,7 @@
 ﻿<prism:MvvmAppBase x:Class="Socialalert.App"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:views="using:Socialalert.Views"
+                   xmlns:conv="using:Socialalert.Converters"
                    xmlns:prism="using:Microsoft.Practices.Prism.StoreApps">
 	<prism:MvvmAppBase.Resources>
         <!-- Application-specific resources -->
@@ -9,10 +9,11 @@
         <x:String x:Key="BaseServerUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/rest/</x:String>
         <x:String x:Key="BaseThumbnailUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/thumbnail/</x:String>
         <x:String x:Key="BaseImageUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/media/</x:String>
-        <x:String x:Key="HubPageTitle">Popular Pictures</x:String>
         <x:Int32 x:Key="LoadDelay">0</x:Int32>
         <FontFamily x:Key="AwesomeIcons">fontawesome-webfont.ttf#FontAwesome</FontFamily>
-
-        <views:ItemClickedConverter x:Name="ItemClickedConverter" />
+        <Visibility x:Key="Debug">Visible</Visibility>
+        <conv:ItemClickedConverter x:Name="ItemClickedConverter" />
+        <conv:BooleanToVisibilityConverter x:Name="BooleanToVisibilityConverter" />
+        <conv:StringFormatConverter x:Name="StringFormatConverter"/>
     </prism:MvvmAppBase.Resources>
 </prism:MvvmAppBase>
