--- a/socialalert-gui/GroupedItemsPage.xaml
+++ b/socialalert-gui/GroupedItemsPage.xaml
@@ -1,20 +1,17 @@
-﻿<prism:VisualStateAwarePage
+﻿<Page
     x:Name="pageRoot"
-    x:Class="Socialalert.Views.HubPage"
+    x:Class="Socialalert.UI.GroupedItemsPage"
+    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Socialalert.Views"
-    xmlns:vm="using:Socialalert.ViewModels"
+    xmlns:local="using:Socialalert.UI"
+    xmlns:data="using:Socialalert.UI.Data"
+    xmlns:common="using:Socialalert.UI.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:i="using:Microsoft.Xaml.Interactivity"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="using:Microsoft.Practices.Prism.StoreApps"
-    mc:Ignorable="d"
-    prism:ViewModelLocator.AutoWireViewModel="True"
-    d:DataContext="{d:DesignData Source=/Data/HubPage.json, Type=vm:HubPageViewModel}">
+    mc:Ignorable="d">
 
-    <prism:VisualStateAwarePage.Resources>
+    <Page.Resources>
         <x:String x:Key="ChevronGlyph">&#xE26B;</x:String>
         <!--
             Collection of grouped items displayed by this page, bound to a subset
@@ -24,18 +21,9 @@
             x:Name="groupedItemsViewSource"
             Source="{Binding Groups}"
             IsSourceGrouped="true"
-            ItemsPath="Items"/>
-    </prism:VisualStateAwarePage.Resources>
-
-    <prism:VisualStateAwarePage.TopAppBar>
-        <AppBar x:Uid="TopAppBar">
-            <AppBarButton Visibility="{StaticResource Debug}" Name="dumpData" FontFamily="Global User Interface" Label="Dump data" Command="{Binding DumpData}">
-                <AppBarButton.Icon>
-                    <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf083;"/>
-                </AppBarButton.Icon>
-            </AppBarButton>
-        </AppBar>
-    </prism:VisualStateAwarePage.TopAppBar>
+            ItemsPath="Items"
+            d:Source="{Binding Groups, Source={d:DesignData Source=/Data/SampleData.json, Type=data:SampleDataSource}}"/>
+    </Page.Resources>
 
     <!--
         This grid acts as a root panel for the page that defines two rows:
@@ -43,7 +31,6 @@
         * Row 1 contains the rest of the page layout
     -->
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        
         <Grid.ChildrenTransitions>
             <TransitionCollection>
                 <EntranceThemeTransition/>
@@ -62,27 +49,22 @@
             Grid.RowSpan="2"
             Padding="116,137,40,46"
             ItemsSource="{Binding Source={StaticResource groupedItemsViewSource}}"
-            
             SelectionMode="None"
             IsSwipeEnabled="false"
-            IsItemClickEnabled="True">
-            <i:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="ItemClick">
-                        <core:InvokeCommandAction Command="{Binding PictureSelectedCommand}" InputConverter="{StaticResource ItemClickedConverter}" />
-                    </core:EventTriggerBehavior>
-            </i:Interaction.Behaviors>
+            IsItemClickEnabled="True"
+            ItemClick="ItemView_ItemClick">
             <GridView.ItemTemplate>
                 <DataTemplate>
                     <Grid HorizontalAlignment="Left" Width="400" Height="250">
                         <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
-                            <Image Source="{Binding ImageUrl}" Stretch="Uniform" AutomationProperties.Name="{Binding Title}"/>
+                            <Image Source="{Binding ImagePath}" Stretch="Uniform" AutomationProperties.Name="{Binding Title}"/>
                         </Border>
                         <StackPanel VerticalAlignment="Bottom" Background="{ThemeResource ListViewItemOverlayBackgroundThemeBrush}">
                             <TextBlock Text="{Binding Title}" Foreground="{ThemeResource ListViewItemOverlayForegroundThemeBrush}" Style="{StaticResource TitleTextBlockStyle}" Height="30" Margin="15,0,15,0"/>
                             <!-- <TextBlock Text="{Binding Description}" Foreground="{ThemeResource ListViewItemOverlaySecondaryForegroundThemeBrush}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" Margin="15,0,15,10"/> -->
                             <Grid Height="29">
-                                <TextBlock Text="{Binding Creator}" Foreground="{ThemeResource ListViewItemOverlaySecondaryForegroundThemeBrush}" Style="{StaticResource CaptionTextBlockStyle}" Grid.Column="0" TextWrapping="NoWrap" Margin="15,0,15,0" HorizontalAlignment="Left"/>
-                                <TextBlock Text="{Binding Creation}" Foreground="{ThemeResource ListViewItemOverlaySecondaryForegroundThemeBrush}" Style="{StaticResource CaptionTextBlockStyle}" Grid.Column="1" TextWrapping="NoWrap" Margin="15,0,15,0" HorizontalAlignment="Right"/>
+                                <TextBlock Text="{Binding Description}" Foreground="{ThemeResource ListViewItemOverlaySecondaryForegroundThemeBrush}" Style="{StaticResource CaptionTextBlockStyle}" Grid.Column="0" TextWrapping="NoWrap" Margin="15,0,15,0" HorizontalAlignment="Left"/>
+                                <TextBlock Text="{Binding Content}" Foreground="{ThemeResource ListViewItemOverlaySecondaryForegroundThemeBrush}" Style="{StaticResource CaptionTextBlockStyle}" Grid.Column="1" TextWrapping="NoWrap" Margin="15,0,15,0" HorizontalAlignment="Right"/>
                             </Grid>
                         </StackPanel>
                     </Grid>
@@ -100,14 +82,12 @@
                             <Grid Margin="0,0,0,2">
                                 <Button Foreground="{ThemeResource ApplicationHeaderForegroundThemeBrush}"
                                     AutomationProperties.Name="Group Title"
-                                    Style="{StaticResource TextBlockButtonStyle}"
-                                    Command="{Binding CategorySelectedCommand}" CommandParameter="{Binding}">
-                                    
+                                    Click="Header_Click"
+                                    Style="{StaticResource TextBlockButtonStyle}" >
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="{Binding Title}" Margin="0,-11,10,10" Style="{StaticResource SubheaderTextBlockStyle}" TextWrapping="NoWrap" />
                                         <TextBlock Text="{StaticResource ChevronGlyph}" FontFamily="Segoe UI Symbol" Margin="0,-11,0,10" Style="{StaticResource SubheaderTextBlockStyle}" TextWrapping="NoWrap" />
                                     </StackPanel>
-                                    
                                 </Button>
                             </Grid>
                         </DataTemplate>
@@ -117,24 +97,19 @@
         </GridView>
 
         <!-- Back button and page title -->
-        <Grid x:Name="titleGrid">
+        <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="120" />
-                <ColumnDefinition Width="120" />
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="backButton" Margin="39,59,39,0" VerticalAlignment="Top"
-                          AutomationProperties.AutomationId="HubPageGoBackButton"
-                          AutomationProperties.Name="Back"
-                          AutomationProperties.ItemType="Navigation Button"
-                          Command="{Binding GoBackCommand, ElementName=pageRoot}"
-                          Style="{StaticResource NavigationBackButtonNormalStyle}"/>
-
-            <TextBlock x:Name="pageTitle" x:Uid="HubPageTitle" Text="Popular Pictures" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="2" 
-                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,0,40" Height="40"/>
-            <TextBlock TextWrapping="Wrap" Text="&#xf083;" Margin="10,30,0,10" Grid.Column="1" HorizontalAlignment="Left" FontFamily="{StaticResource AwesomeIcons}" FontSize="72" Height="80" VerticalAlignment="Center" Width="80"/>
+            <Button x:Name="backButton" Margin="39,59,39,0" Command="{Binding NavigationHelper.GoBackCommand, ElementName=pageRoot}"
+                        Style="{StaticResource NavigationBackButtonNormalStyle}"
+                        VerticalAlignment="Top"
+                        AutomationProperties.Name="Back"
+                        AutomationProperties.AutomationId="BackButton"
+                        AutomationProperties.ItemType="Navigation Button"/>
+            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
-
-        <ProgressRing Grid.Row="1" IsActive="{Binding LoadingData}" Height="100" Width="100" />
     </Grid>
-</prism:VisualStateAwarePage>
+</Page>
