--- a/prism-app/Views/CategoryDetailPage.xaml
+++ b/prism-app/Views/CategoryDetailPage.xaml
@@ -55,6 +55,16 @@
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+
+        <bm:Map  Grid.Row="1" Grid.Column="0" conv:MapBindings.MapBounds="{Binding MapBounds}" Credentials="{StaticResource ResourceKey=BingMapKey}" x:Name="map">
+            <bm:MapItemsControl x:Name="ListOfItems" ItemsSource="{Binding Category.GeoLocatedItems}" ItemTemplate="{StaticResource locationTemplate}">
+
+            </bm:MapItemsControl>
+        </bm:Map>
 
         <!-- Horizontal scrolling grid -->
 
@@ -63,11 +73,11 @@
             AutomationProperties.AutomationId="ItemGridView"
             AutomationProperties.Name="Items In Category"
             TabIndex="1"
-            Grid.RowSpan="2"
-            Padding="120,126,120,50"
+            Grid.Row="1"
+            Grid.Column="1"
             ItemsSource="{Binding Source={StaticResource itemsViewSource}}"
             SelectionMode="None"
-            IsSwipeEnabled="false"
+            IsSwipeEnabled="False"
             IsItemClickEnabled="True">
             <i:Interaction.Behaviors>
                 <core:EventTriggerBehavior EventName="ItemClick">
@@ -76,43 +86,30 @@
             </i:Interaction.Behaviors>
             <GridView.ItemTemplate>
                 <DataTemplate>
-                    <Grid Height="110" Width="480" Margin="10">
+                    <Grid Height="110" Margin="10">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="200"/>
                         </Grid.ColumnDefinitions>
-                        <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}" Width="110" Height="110">
-                            <Image Source="{Binding ImageUrl}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Title}"/>
+                        <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
+                            <Image Source="{Binding ImageUrl}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Title}" HorizontalAlignment="Left"/>
                         </Border>
-                        <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
+                        <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" >
                             <TextBlock Text="{Binding Title}" Style="{StaticResource TitleTextBlockStyle}" TextWrapping="NoWrap"/>
                             <TextBlock Text="{Binding Creator}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap"/>
-                            <TextBlock Text="{Binding Creation}" Style="{StaticResource BodyTextBlockStyle}" MaxHeight="60"/>
+                            <TextBlock Text="{Binding Description}" Style="{StaticResource BodyTextBlockStyle}" MaxHeight="60"/>
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
             </GridView.ItemTemplate>
-            <GridView.Header>
-                <StackPanel Width="480" Height="480" Margin="0,4,14,0">
-                    <bm:Map Grid.Column="1" Grid.Row="1" Credentials="{StaticResource ResourceKey=BingMapKey}" x:Name="map" ZoomLevel="2" Height="480">
-                        <bm:MapItemsControl x:Name="ListOfItems" ItemsSource="{Binding Category.GeoLocatedItems}" ItemTemplate="{StaticResource locationTemplate}">
-                            
-                        </bm:MapItemsControl>
-                    </bm:Map>
-                </StackPanel>
-            </GridView.Header>
-            <GridView.ItemContainerStyle>
-                <Style TargetType="FrameworkElement">
-                    <Setter Property="Margin" Value="52,0,0,2"/>
-                </Style>
-            </GridView.ItemContainerStyle>
         </GridView>
 
         <!-- Back button and page title -->
-        <Grid>
+        <Grid Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Button x:Name="backButton" Margin="39,59,39,0"  VerticalAlignment="Top"
                           AutomationProperties.AutomationId="CategoryDetailPageGoBackButton"
@@ -122,6 +119,11 @@
                           Style="{StaticResource NavigationBackButtonNormalStyle}" />
             <TextBlock x:Name="pageTitle" Text="{Binding Category.Title}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
+            <local:SearchPictureUserControl x:Name="searchUserControl"
+                                     Height="80"
+                                     Grid.Column="3"
+                                     HorizontalAlignment="Left"
+                                     Width="400" />
         </Grid>
 
         <ProgressRing Grid.Row="1" IsActive="{Binding LoadingData}" Height="100" Width="100" />
