picture comments + removed pubsub events

--- a/prism-app/App.xaml
+++ b/prism-app/App.xaml
@@ -10,6 +10,7 @@
         <x:String x:Key="BaseThumbnailUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/thumbnail/</x:String>
         <x:String x:Key="BaseImageUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/media/</x:String>
         <x:String x:Key="BasePreviewUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/preview/</x:String>
+        <x:String x:Key="ProfilePictureUriPattern">profiles/{0}.jpg</x:String>
         <x:Int32 x:Key="LoadDelay">0</x:Int32>
         <FontFamily x:Key="AwesomeIcons">/Views/fontawesome-webfont.ttf#FontAwesome</FontFamily>
         <Visibility x:Key="Debug">Visible</Visibility>
@@ -17,6 +18,7 @@
         <conv:BooleanToVisibilityConverter x:Name="BooleanToVisibilityConverter" />
         <conv:StringToVisibilityConverter x:Name="StringToVisibilityConverter"/>
         <conv:StringFormatConverter x:Name="StringFormatConverter"/>
+        <conv:ViewChangeEndedConverter x:Name="ViewChangeEndedConverter"/>
         <x:String x:Key="ChevronGlyph">&#xE26B;</x:String>
         <x:String x:Key="OnlineGlyph">&#xf007;</x:String>
         <x:String x:Key="OfflineGlyph">&#xf056;</x:String>
