--- a/prism-app/Views/CategoryDetailPage.xaml
+++ b/prism-app/Views/CategoryDetailPage.xaml
@@ -59,11 +59,12 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <bm:Map  Grid.Row="1" Grid.Column="0" conv:MapBindings.MapBounds="{Binding MapBounds}" Credentials="{StaticResource ResourceKey=BingMapKey}" x:Name="map">
+        <bm:Map  Grid.Row="1" Grid.Column="0" conv:MapBindings.MapBounds="{Binding MapBounds}" Credentials="{StaticResource ResourceKey=BingMapKey}" ViewChangeEnded="map_ViewChangeEnded" x:Name="map">
             <bm:MapItemsControl x:Name="ListOfItems" ItemsSource="{Binding Category.GeoLocatedItems}" ItemTemplate="{StaticResource locationTemplate}">
 
             </bm:MapItemsControl>
         </bm:Map>
+        
 
         <!-- Horizontal scrolling grid -->
 
@@ -102,6 +103,7 @@
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
+        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding MapRadius}" Height="40" HorizontalAlignment="Left" VerticalAlignment="Bottom" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" Width="100"/>
 
         <!-- Back button and page title -->
         <Grid Grid.ColumnSpan="2">
@@ -118,7 +120,7 @@
                           Style="{StaticResource NavigationBackButtonNormalStyle}" />
             <TextBlock x:Name="pageTitle" Text="{Binding Category.Title}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
-            <local:SearchPictureUserControl x:Name="searchUserControl"
+            <local:SearchPictureUserControl x:Name="searchUserControl" DataContext="{Binding PictureSearch}"
                                      Height="80"
                                      Grid.Column="3"
                                      HorizontalAlignment="Left"
