--- a/prism-app/Views/PictureCommentUserControl.xaml
+++ b/prism-app/Views/PictureCommentUserControl.xaml
@@ -20,41 +20,44 @@
     
     <!-- Page content -->
     <StackPanel>
-    <GridView
-            x:Name="itemGridView"
-            AutomationProperties.AutomationId="ItemGridView"
-            AutomationProperties.Name="Picture comments"
-            TabIndex="1"
-            Grid.Row="1"
-            Grid.Column="1"
-            ItemsSource="{Binding Source={StaticResource itemsViewSource}}"
-            SelectionMode="None"
-            IsSwipeEnabled="False">
-        
-        <GridView.ItemTemplate>
-            <DataTemplate>
-                <Grid Height="110" Margin="10">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="200"/>
-                        <ColumnDefinition Width="200"/>
-                    </Grid.ColumnDefinitions>
-                    <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
-                        <Image Source="{Binding ProfilePictureUrl}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Creator}" HorizontalAlignment="Left"/>
-                    </Border>
-                    <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
-                        <StackPanel Orientation="Horizontal">
-                            <FontIcon x:Uid="Online" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OnlineGlyph}" Visibility="{Binding Online, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
-                            <FontIcon x:Uid="Offline" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OfflineGlyph}" Visibility="{Binding Offline, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
-                            <TextBlock Text="{Binding Creator}" TextWrapping="NoWrap" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
-                        </StackPanel>
-                        <TextBlock Text="{Binding Comment}" Style="{StaticResource BodyTextBlockStyle}" MaxHeight="60"/>
-                        <TextBlock Text="{Binding Creation}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
-                    </StackPanel>
-                </Grid>
-            </DataTemplate>
-        </GridView.ItemTemplate>
-    </GridView>
+        <ScrollViewer Height="800" Width="440" VerticalScrollMode="Enabled" HorizontalScrollMode="Disabled">
+            <GridView
+                    x:Name="itemGridView"
+                    AutomationProperties.AutomationId="ItemGridView"
+                    AutomationProperties.Name="Picture comments"
+                    TabIndex="1"
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    ItemsSource="{Binding Source={StaticResource itemsViewSource}}"
+                    SelectionMode="None"
+                    IsTapEnabled="False"
+                    IsSwipeEnabled="False">
 
+            <GridView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Height="110" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="200"/>
+                        </Grid.ColumnDefinitions>
+                        <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
+                            <Image Source="{Binding ProfilePictureUrl}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Creator}" HorizontalAlignment="Left"/>
+                        </Border>
+                        <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
+                            <StackPanel Orientation="Horizontal">
+                                <FontIcon x:Uid="Online" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OnlineGlyph}" Visibility="{Binding Online, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
+                                <FontIcon x:Uid="Offline" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OfflineGlyph}" Visibility="{Binding Offline, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
+                                <TextBlock Text="{Binding Creator}" TextWrapping="NoWrap" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
+                            </StackPanel>
+                            <TextBlock Text="{Binding Comment}" Style="{StaticResource BodyTextBlockStyle}" MaxHeight="60"/>
+                            <TextBlock Text="{Binding Creation}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
+        
+        </ScrollViewer>
         <ProgressRing IsActive="{Binding LoadingData}" Height="100" Width="100" />
     </StackPanel>
 </UserControl>
